--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,14 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"mobx": "^5.9.0",
+		"mobx-react": "^5.4.3",
 		"react": "^16.8.3",
 		"react-dom": "^16.8.3",
-		"react-scripts": "2.1.5"
+		"react-router": "^4.3.1",
+		"react-router-dom": "^4.3.1",
+		"react-scripts": "2.1.5",
+		"styled-components": "^4.1.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
