--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
 		"mobx-react": "^5.4.3",
 		"prop-types": "^15.7.2",
 		"react": "^16.8.3",
+		"react-cookie": "^3.0.8",
 		"react-dom": "^16.8.3",
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "2.1.5",
-		"styled-components": "^4.1.3"
+		"styled-components": "^4.1.3",
+		"validator": "^10.11.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -27,5 +29,6 @@
 		"not dead",
 		"not ie <= 11",
 		"not op_mini all"
-	]
+	],
+	"proxy": "http://localhost:8080"
 }
