--- a/client/package.json
+++ b/client/package.json
@@ -30,5 +30,12 @@
 		"not ie <= 11",
 		"not op_mini all"
 	],
-	"proxy": "http://localhost:8080"
+	"proxy": "http://localhost:8080",
+	"devDependencies": {
+		"@types/react": "^16.8.6",
+		"@types/react-dom": "^16.8.2",
+		"@types/react-router": "^4.4.4",
+		"@types/react-router-dom": "^4.3.1",
+		"typescript": "^3.3.3333"
+	}
 }
