--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
 		"react-dom": "^16.8.3",
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.3.1",
-		"react-scripts": "2.1.5",
+		"react-scripts": "^2.1.8",
 		"styled-components": "^4.1.3",
 		"validator": "^10.11.0"
 	},
