--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,6 +15,7 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
+		"downlevelIteration": true,
 		"experimentalDecorators": true
 	},
 	"include": ["src"]
