--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
 		"react": "^16.8.3",
 		"react-cookie": "^3.0.8",
 		"react-dom": "^16.8.3",
+		"react-recaptcha": "^2.3.10",
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "^2.1.8",
