--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"mobx": "^5.9.0",
 		"mobx-react": "^5.4.3",
+		"polished": "^3.1.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.8.3",
 		"react-cookie": "^3.0.8",
