--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
 		"prop-types": "^15.7.2",
 		"react": "^16.8.3",
 		"react-cookie": "^3.0.8",
+		"react-countdown-now": "^2.1.0",
 		"react-dom": "^16.8.3",
 		"react-recaptcha": "^2.3.10",
 		"react-router": "^4.3.1",
